{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 107,
  "lineage": "3c2a0280-2c78-98da-746a-3e033b4bb10f",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "app_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.240.14.66",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-11T06:30:59.346-07:00",
            "id": "projects/infra-301318/regions/europe-west1/addresses/reddit-app-ip",
            "name": "reddit-app-ip",
            "network_tier": "PREMIUM",
            "project": "infra-301318",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-301318/regions/europe-west1/addresses/reddit-app-ip"
          }
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_puma",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9292"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-11T06:30:59.235-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infra-301318/global/firewalls/allow-puma-default",
            "log_config": [],
            "name": "allow-puma-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/networks/default",
            "priority": 1000,
            "project": "infra-301318",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/firewalls/allow-puma-default",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "reddit-app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/images/reddit-app-base-1616330014",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-301318/zones/europe-west1-b/disks/reddit-app-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-301318/zones/europe-west1-b/instances/reddit-app-0",
            "instance_id": "8094244572654680527",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "sshKeys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDlCUL8YauCQtas0Rb6pKC0c1gW4BpIqdoMZFdbOK7sqtfxysEvOk4qqanUUOOmlQgEAk7LFnBIJUW9ss/6S5VPX7KLqTB8QhlVugixLgVMN7SYGvR5TqET++gfQXV9hIn54WsDVo2qJAqO7N1DKpTG/yTzUNJRnmvUfiXmZGPOrZfG07FBuEqNKdshOuF5eg5Ft5aDcuvKSqMd4WuC7d4DxGFie4zNiWOZQl5eUk7lzimA4N+O1eycHie/6uvyofki4pPWt/6yagXeYRA2TnJ82u1II8kuU82ENlchVW+dbhk56Pj64HBaV+XNyl95UCRJrpyQ2BgE+yqqCf0uv7RG3syA5D5GxlzdOaZFq3SPRTcM9IWxYAHgxR1uOi5xAx4Uw2o9DjaW7qnIX9DMkuyYPvuZ501XZUACYehLWe6PXX [...]
            },
            "metadata_fingerprint": "8nJRT1g3YbY=",
            "name": "reddit-app-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.14.66",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/networks/default",
                "network_ip": "10.132.0.31",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-301318/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-301318"
              }
            ],
            "project": "infra-301318",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-301318/zones/europe-west1-b/instances/reddit-app-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-app"
            ],
            "tags_fingerprint": "M-ggixIz-AU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.app.google_compute_address.app_ip"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "db_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.233.66.14",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-11T06:30:59.283-07:00",
            "id": "projects/infra-301318/regions/europe-west1/addresses/reddit-db-ip",
            "name": "reddit-db-ip",
            "network_tier": "PREMIUM",
            "project": "infra-301318",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-301318/regions/europe-west1/addresses/reddit-db-ip"
          }
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-11T06:30:59.222-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infra-301318/global/firewalls/allow-mongo-default",
            "log_config": [],
            "name": "allow-mongo-default",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/networks/default",
            "priority": 1000,
            "project": "infra-301318",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/firewalls/allow-mongo-default",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "reddit-app"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "reddit-db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/images/reddit-db-base-1616330010",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/infra-301318/zones/europe-west1-b/disks/reddit-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/infra-301318/zones/europe-west1-b/instances/reddit-db",
            "instance_id": "2226720892949838287",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "g1-small",
            "metadata": {
              "sshKeys": "appuser:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDlCUL8YauCQtas0Rb6pKC0c1gW4BpIqdoMZFdbOK7sqtfxysEvOk4qqanUUOOmlQgEAk7LFnBIJUW9ss/6S5VPX7KLqTB8QhlVugixLgVMN7SYGvR5TqET++gfQXV9hIn54WsDVo2qJAqO7N1DKpTG/yTzUNJRnmvUfiXmZGPOrZfG07FBuEqNKdshOuF5eg5Ft5aDcuvKSqMd4WuC7d4DxGFie4zNiWOZQl5eUk7lzimA4N+O1eycHie/6uvyofki4pPWt/6yagXeYRA2TnJ82u1II8kuU82ENlchVW+dbhk56Pj64HBaV+XNyl95UCRJrpyQ2BgE+yqqCf0uv7RG3syA5D5GxlzdOaZFq3SPRTcM9IWxYAHgxR1uOi5xAx4Uw2o9DjaW7qnIX9DMkuyYPvuZ501XZUACYehLWe6PXX [...]
            },
            "metadata_fingerprint": "8nJRT1g3YbY=",
            "name": "reddit-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.233.66.14",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/networks/default",
                "network_ip": "10.132.0.30",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/infra-301318/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "infra-301318"
              }
            ],
            "project": "infra-301318",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-301318/zones/europe-west1-b/instances/reddit-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "reddit-db"
            ],
            "tags_fingerprint": "NQyRUqL7UTU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "module.db.google_compute_address.db_ip"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-05-11T06:30:59.250-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/infra-301318/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/networks/default",
            "priority": 1000,
            "project": "infra-301318",
            "self_link": "https://www.googleapis.com/compute/v1/projects/infra-301318/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "217.20.181.85/32"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}